--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,7 +31,7 @@ body {
 }
 
 .services-title {
-    font-size: 52px !important;
+    font-size: 48px !important;
     line-height: 60px;
     font-weight: 400 !important;
     font-family: var(--secondry-fonts);
@@ -99,9 +99,9 @@ body {
 }
 
 .merg-card h5 {
-    font-size: 18px;
-    font-weight: 600;
-    color: black;
+    font-size: 16px;
+    font-weight: 500;
+    color: rgb(51, 50, 50);
 }
 
 .text {
@@ -323,7 +323,7 @@ body {
     /* z-index: 1; */
     /* height: 81%; */
     /* bottom: 0; */
-    width: 90%;
+    width: 100%;
 }
 
 
@@ -549,6 +549,53 @@ body {
   .faq-list a.collapsed .icon-close {
     display: none;
   }
+ 
+.play-icon {
+    position: absolute;
+    height: 60px;
+    width: 60px;
+    top: calc(50% - 30px);
+    left: calc(50% - 30px);
+    background-color: white;
+    border-radius: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 26px;
+    color: var(--secondary);
+    animation: ripple 1.5s linear infinite;
+    transition: all 0.7s ease;
+}
+.btn-close{
+    background-image: none !important;
+    color: white !important;
+    font-size: 35px;
+    position: absolute;
+    top: -30px;
+    right: -30px;
+    opacity: 1;
+    
+ }
+@keyframes ripple {
+    0% {
+      box-shadow: 0 0 0 0 rgba(0, 123, 255, 0.3), /* Ripple start */
+                  0 0 0 1px rgba(0, 123, 255, 0.3),
+                  0 0 0 3px rgba(0, 123, 255, 0.3),
+                  0 0 0 5px rgba(0, 123, 255, 0.3);
+    }
+    100% {
+      box-shadow: 0 0 0 0 rgba(0, 123, 255, 0.3), /* Ripple end */
+                  0 0 0 4px rgba(0, 123, 255, 0.3),
+                  0 0 0 20px rgba(0, 123, 255, 0),
+                  0 0 0 30px rgba(0, 123, 255, 0);
+    }
+}
+.about-icon{
+    height: 50px;
+    width: 50px;
+    object-fit: contain;
+    margin-right: 10px;
+}
   
   @media (max-width: 1200px) {
     .faq-list {
@@ -563,7 +610,12 @@ body {
     }
   }
 @media only screen and (max-width:991px) {
-
+    .btn-close{
+     
+        top: -20px;
+        right: 0px;
+        
+     }
     .services-title {
         font-size: 32px !important;
         line-height: 36px;
