--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -576,6 +576,51 @@ body {
     opacity: 1;
     
  }
+ /* ==================================================demo */
+ .demo-card {
+    background-color: white;
+    padding: 20px;
+    border-radius: 4px;
+ }
+ .demo-video-image{
+    height: 200px;
+ }
+ .demo-video-image img{
+    object-fit: cover;
+    width: 100%;
+    height: 200px;
+ }
+ .issue-date{
+    font-size: 14px;
+    color: gray;
+ }
+ .demo-heading{
+    font-size: 18px;font-weight: 500;
+    color: black;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    height: 44px;
+ }
+ .demo-text{
+    font-size: 14px;
+    font-weight: 400;
+    color: black;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    /* height: 85px; */
+ }
+ .demo-btn{
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: 500;
+ }
+ .demo-btn:hover{
+    color: var(--text);
+ }
 @keyframes ripple {
     0% {
       box-shadow: 0 0 0 0 rgba(0, 123, 255, 0.3), /* Ripple start */
@@ -646,7 +691,16 @@ body {
     }
 }
 
+
 @media only screen and (max-width:767px) {
+    .demo-video-image{
+        height: auto;
+     }
+     .demo-video-image img{
+        object-fit: cover;
+        width: 100%;
+        height: auto;
+     }
     .faq-card h3{
         font-size: 20px;
         font-weight: 500;
