--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -314,16 +314,16 @@ body {
 }
 
 .banner-video-b {
-    /* position: absolute;
-    top: 2%;
-    left: 10px;
-    right: 10px; */
-    /* max-width: 60%; */
+    position: absolute;
+    top: 1%;
+    left: 20%;
+    right: 10px;
+    max-width: 60%;
     height: auto;
-    /* z-index: 1; */
-    /* height: 81%; */
-    /* bottom: 0; */
-    width: 100%;
+    z-index: 1;
+    height: 81%;
+    bottom: 0;
+    /* width: 100%; */
 }
 
 
