--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -590,12 +590,12 @@ body {
     border-radius: 4px;
  }
  .demo-video-image{
-    height: 200px;
+    height: 170px;
  }
  .demo-video-image img{
-    object-fit: cover;
-    width: 100%;
-    height: 200px;
+    object-fit: fill;
+    width: 100% !important;
+    height: 170px;
  }
  .issue-date{
     font-size: 14px;
